--- a/project-2/package.json
+++ b/project-2/package.json
@@ -8,6 +8,9 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "express": "^4.17.0",
+    "mysql2": "^1.6.5",
+    "sequelize-cli": "^5.4.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3"
   },
